# ChessVision

./: $zip_file  .dockerignore  .gitignore  .notes.txt  Dockerfile  Manifest.in  README.md  bio-env.txt  build_and_push.sh  build_and_run.sh  copy_bucket.py  install.sh  install_conda_linux.sh  install_pip_linux.sh  invoke_endpoint.py  jei.hdf5  labels.npy  pred_probs.npy  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  update_web_bucket.sh  wiki.md
.ipynb_checkpoints/: Corner Checker-checkpoint.ipynb
chessvision/: __init__.py  board_classifier.py  board_extractor.py  chessvision.py  cv_globals.py  generate_report.py  move_best_weights.py  parameters.py  plot_model.py  rename.py  run_notebook.py  test.py  util.py
computeroot/: README.md  clean_uploads_folder.sh  cleanup_uploads_folder.sh  cv_compute_startup.sh  cv_endpoint.py  make_uploads_folder.sh  stockfish-9-64-linux  stockfish-9-64-mac  test.py  test_theano.py
container/: container_endpoint.py  container_endpoint_alt.py  main.py  nginx.conf  serve  wsgi.py
data/: README.md  count_dir.sh  labels.csv  move_new_squares.sh
local_test/: aws.sh  predict_aws.sh  predict_local.sh
ml/: generate_report.py  hand_labeller.py  inferences.txt  plot_model.py  process_new_raw_images.py  test.py
notebooks/: Quilt.ipynb  Tests.ipynb
sagemaker/: .gitignore  build.sh  invoke_endpoint.py  start.sh
scripts/: build_and_run.sh  copy_bucket.py  make_masks.py  move_new_squares.sh  predict_local.sh  process_new_raw_images.py  resize_images.py  test.json  transfer_squares.py
src/: chessvision.py  (+27 more)
(+377 files in other folders)
