[metadata]
name = chessvision
version = 0.0.1
author = Gudbrand Tandberg
author_email = gudbrandduff@gmail.com
description = Chessvision package

[options]
include_package_data = True
packages = 
    chessvision
    chessvision.data_processing
    chessvision.model
python_requires = >=3.8
install_requires =
    opencv-python==3.4.8.29
    tensorflow==2.8
    python-chess
    matplotlib
    protobuf==3.20.1

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

[options.packages.find]
include = chessvision
# where = chessvision
# exclude =
#     examples*
#     tools*
#     docs*
#     my_package.tests*